--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 </li>
             </ul>
             <ul class="flex-direction-nav">
-                <li><a class="flex-prev" href="javascript:;"><img src="Image/zuo.png"></a></li>
-                <li><a class="flex-next" href="javascript:;"><img src="Image/you.png"></a></li>
+                <li><a class="flex-prev" href="javascript:;"><img src="image/zuo.png"></a></li>
+                <li><a class="flex-next" href="javascript:;"><img src="image/you.png"></a></li>
             </ul>
             <ol id="bannerCtrl" class="flex-control-nav flex-control-paging">
                 <li><a></a></li>
@@ -267,7 +267,7 @@
   <img class="xjt" src="Image/xjt.png">
                         <ul class="tab-hd">
                             <li class="active">
-                                <img class="xyfc" src="Image/xyfc04.png">
+                                <img class="xyfc" src="image/xyfc04.png">
                                 <p class="tited tits">部门新闻</p>
                             </li>
                             <p class="mover" id="Mov"><a href="./content/More-page.html">+ 更多</a></p>       
@@ -315,10 +315,10 @@
                 <!-- 纵横 -->
                 <div class="flash002">
                     <div class="tab">
-                            <img class="xjt" src="Image/xjt.png">
+                            <img class="xjt" src="image/xjt.png">
                         <ul class="tab-hd">
                             <li class="active">
-                                <img class="xyfc" src="Image/xyfc02.png">
+                                <img class="xyfc" src="image/xyfc02.png">
                                 <p class="tited tits">通知公告</p>
                             </li>
                             <p class="mover" id="Mov"><a href="./content/More-page.html">+ 更多</a></p>
@@ -368,10 +368,10 @@
                 <!-- 纵横 -->
                 <div class="flash003">
                     <div class="tab">
-                            <img class="xjt" src="Image/xjt.png">
+                            <img class="xjt" src="image/xjt.png">
                         <ul class="tab-hd">
                             <li class="active">
-                                <img class="xyfc" src="Image/xyfc03.png">
+                                <img class="xyfc" src="image/xyfc03.png">
                                 <p class="tited tits">政策法规</p>
                             </li>
                             <p class="mover" id="Mov"><a href="./content/More-page.html">+ 更多</a></p>
@@ -421,10 +421,10 @@
                 <!-- 通知 -->
                 <div class="flash004">
                     <div class="tab">
-                            <img class="xjt" src="Image/xjt.png">
+                            <img class="xjt" src="image/xjt.png">
                         <ul class="tab-hd">
                             <li class="active">
-                                <img class="xyfc" src="Image/xyfc.png">
+                                <img class="xyfc" src="image/xyfc.png">
                                 <p class="tited tits">资料下载</p>
                             </li>
                             <p class="mover" id="Mov"><a href="./content/More-page.html">+ 更多</a></p>
