--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <!-- 新闻中心 -->
                 <div class="notice">
                     <div class="title01">
-    <h1><img src="Image/title_notice.png"></h1>
+    <h1><img src="./image/title_notice.png"></h1>
     <a href="./content/More-page.html" target="_blank">+ 更多</a>
 </div>
 <div class="notice_box">
